src/components/snapshots/gview__components__commit_viewer__tests__commit_viewer_draw_unfocused.snap
---
source: src/components/commit_viewer.rs
expression: "format!(\"{:?}\", buffer)"
snapshot_kind: text
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "┌current commit (g: go to commit)──────────────────────────────────────────────┐",
        "│def789ghi012: Add new feature implementation                                  │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: BOLD,
        x: 33, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
